Change History
==============

1.7.2dev unreleased
-------------------

- Fix selectors to work with latest jquery
  [vangheem]


1.7.1 2012-02-13
----------------

- Fix override disabling of fields with vocabularies.

- Fix issue #20: "email validation text is wrong," which would also
  affect several other error strings. Thanks, sunew!

- Fix issue #22: "RichLabel Widget displays '1' instead of label text
  after submitting form whith not all required fields provided."
  Thanks, ksuess!

- Partially Fixed issue #18 (new, github tracker): "BadRequest after
  adding a new thanks page if link integrity checking is enabled" by
  removing link from default nosubmit message. A fix that will allow
  importing, cutting and pasting of old versions will need work. Thanks,
  datakurre!

1.7.0 2011-11-16
----------------

- Add archetypes viewlet manger in forms before & after fieldsets
  [jfroche]

1.7rc1 2011-11-08
-----------------

- Add accordion for widgets in quick edit mode.
  [smcmahon]

1.7b7 unreleased
----------------

- Some validation messages were partially untranslatable. Github issue
  "Validation error of isEmail validator is not translated," thanks markvl.
  [smcmahon]

- Eradicate rounded corners in quick edit toolbox.
  General quick editor style cleanup.
  [smcmahon]

- Updated Catalan (ca) and Spanish (es) translation
  [arielvb]

- Fixed a test that changed the working directory, but failed to change it
  back to the original. This was resulting in zero test results when using
  collective.xmltestreport. [pumazi]

- Added dependencies Plone and Products.Archetypes.
  [pumazi]

- Created the test extra requirement to pull in collective.funkload for tests.
  [pumazi]

- Updated basque (eu) translation
  [erral]

- Provide compatibility with DateTime 3.
  [hannosch]

1.7b6 2011-10-17
----------------

- Declare dependency on CMFCore's configuration to make sure that its 
  permissions are loaded early enough in Plone 4.1.
  [davisagli]
